--- a/src/Styles/cv.scss
+++ b/src/Styles/cv.scss
@@ -4,7 +4,7 @@
         box-sizing: border-box;
         text-decoration: none;
     }
-
+    
     $time-transition: 0.3s; // section {
     //     background: $secondary-color-dark;
     //     min-height: 100vh;
@@ -19,7 +19,7 @@
         //     text-align: justify;
         // }
     }
-
+    
     .app-container {
         position: relative;
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -54,8 +54,8 @@
             .container-footer {
                 background: $color-515;
             }
-            header{
-                [class^="icon-"]{
+            header {
+                [class^="icon-"] {
                     color: $primary-color-text;
                 }
             }
@@ -71,7 +71,7 @@
                 width: 30%;
                 box-shadow: 0 1px 11px rgba(0, 0, 0, 0.19), 0 2px 8px rgba(0, 0, 0, 0.23);
                 &>section {
-                    padding: 0 0 8% 8%;
+                    padding: 0 0 0 8%;
                 }
                 h1.name {
                     text-align: right;
@@ -93,6 +93,14 @@
                 }
                 .container-detail-personal-data {
                     color: $primary-color-text; // padding-bottom: 8%;
+                    &.skills {
+                        [class^="icon-"] {
+                            padding-top: 7%;
+                        }
+                        &>div {
+                            border-bottom: none;
+                        }
+                    }
                     .text {
                         display: block;
                         font-size: 0.7em;
@@ -108,11 +116,11 @@
                     } // div:last-of-type {
                     //     border-bottom: none;
                     // }
-                }
-                [class^="icon-"] {
-                    display: table-cell;
-                    font-size: 1.3em;
-                    padding: 10% 20px 0 0;
+                    [class^="icon-"] {
+                        display: table-cell;
+                        font-size: 1.3em;
+                        padding: 10% 20px 0 0;
+                    }
                 }
             }
             .main-right-section {
@@ -282,7 +290,7 @@
             }
         }
     }
-
+    
     @media (max-width: 21cm) {
         .app-container {
             width: 100%; // .message-content{
@@ -335,7 +343,7 @@
             }
         }
     }
-
+    
     @media print {
         .app-container {
             width: 21cm;
@@ -373,7 +381,7 @@
             margin: 0;
         }
     }
-
+    
     .loading {
         background: rgba(9, 11, 14, 0.47);
         min-height: 100vh;
