--- a/src/Styles/Main/index.css
+++ b/src/Styles/Main/index.css
@@ -72,6 +72,10 @@ body {
         padding-top: 7%; }
       .app-container main .aside-left-container .container-detail-personal-data.skills > div {
         border-bottom: none; }
+      .app-container main .aside-left-container .container-detail-personal-data.skills .skill-container {
+        margin: 10px 0; }
+        .app-container main .aside-left-container .container-detail-personal-data.skills .skill-container span {
+          margin-bottom: -8px; }
       .app-container main .aside-left-container .container-detail-personal-data .text {
         display: block;
         font-size: 0.7em;
@@ -219,6 +223,11 @@ body {
       .app-container main.table > * {
         display: block;
         width: 100%; }
+    .app-container main .aside-left-container .container-detail-personal-data.skills .skill-container {
+      margin: 10px 0;
+      width: 50%;
+      display: inline-block;
+      padding: 0 2%; }
     .app-container main .aside-left-container .container-detail-personal-data .container-detail {
       width: 90%;
       padding: 5% 8% 5% 0; }
@@ -256,6 +265,10 @@ body {
       padding: 3% !important; }
     .app-container .aside-left-container {
       width: 30% !important; }
+      .app-container .aside-left-container .container-detail-personal-data.skills .skill-container {
+        width: 100% !important;
+        display: block !important;
+        padding: 0 !important; }
       .app-container .aside-left-container .container-detail-personal-data .container-detail {
         width: 85% !important;
         padding: 8% 8% 8% 0 !important; }
@@ -314,3 +327,50 @@ body {
   40% {
     -webkit-transform: scale(1);
     transform: scale(1); } }
+
+input[type="range"] {
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  width: 100%;
+  height: 2px;
+  margin: 0;
+  border: none;
+  padding: 1px 2px;
+  border-radius: 14px;
+  background: white;
+  outline: none;
+  /* no focus outline */ }
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 15px;
+  height: 15px;
+  border: none;
+  border-radius: 50px;
+  background: white;
+  /* android <= 2.2 */
+  /* older mobile safari and android > 2.2 */
+  /* W3C */ }
+
+input[type="range"]::-moz-range-thumb {
+  width: 100%;
+  border: none;
+  border-radius: 12px;
+  /* W3C */ }
+
+input[type="range"]::-ms-thumb {
+  width: 40px;
+  border-radius: 12px;
+  border: 0;
+  background-image: linear-gradient(to bottom, #529de1 0, #245e8f 100%);
+  /* W3C */ }
+
+input[type="range"]::-ms-track {
+  border: inherit;
+  color: transparent;
+  /* don't drawn vertical reference line */
+  background: transparent; }
+
+input[type="range"]::-ms-fill-lower,
+input[type="range"]::-ms-fill-upper {
+  background: transparent; }
