--- a/src/Styles/cv.scss
+++ b/src/Styles/cv.scss
@@ -4,7 +4,7 @@
         box-sizing: border-box;
         text-decoration: none;
     }
-    
+
     $time-transition: 0.3s; // section {
     //     background: $secondary-color-dark;
     //     min-height: 100vh;
@@ -19,13 +19,12 @@
         //     text-align: justify;
         // }
     }
-    
+
     .app-container {
         position: relative;
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
         min-height: 100vh;
-        margin: 0 auto;
-        // padding: 3px;
+        margin: 0 auto; // padding: 3px;
         max-width: 21cm; // height: 100vh;
         h1 {
             font-size: 1.5em; // padding: 10px;
@@ -99,6 +98,12 @@
                         }
                         &>div {
                             border-bottom: none;
+                        }
+                        .skill-container {
+                            margin: 10px 0;
+                            span {
+                                margin-bottom: -8px;
+                            }
                         }
                     }
                     .text {
@@ -290,7 +295,7 @@
             }
         }
     }
-    
+
     @media (max-width: 21cm) {
         .app-container {
             width: 100%; // .message-content{
@@ -305,6 +310,12 @@
             }
             main .aside-left-container {
                 .container-detail-personal-data {
+                    &.skills .skill-container {
+                        margin: 10px 0;
+                        width: 50%;
+                        display: inline-block;
+                        padding: 0 2%;
+                    }
                     &:first-of-type {
                         // padding-top: 3%;
                     }
@@ -343,7 +354,7 @@
             }
         }
     }
-    
+
     @media print {
         .app-container {
             width: 21cm;
@@ -363,6 +374,12 @@
             .aside-left-container {
                 width: 30% !important;
                 .container-detail-personal-data {
+                    &.skills .skill-container {
+                        // margin: 10px 0;
+                        width: 100% !important;
+                        display: block !important;
+                        padding: 0 !important;
+                    }
                     .container-detail {
                         width: 85% !important;
                         padding: 8% 8% 8% 0 !important;
@@ -381,7 +398,7 @@
             margin: 0;
         }
     }
-    
+
     .loading {
         background: rgba(9, 11, 14, 0.47);
         min-height: 100vh;
@@ -437,4 +454,60 @@
                 transform: scale(1.0);
             }
         }
+    }
+
+    input[type="range"] {
+        -webkit-appearance: none;
+        -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+        width: 100%;
+        height: 2px;
+        margin: 0;
+        border: none;
+        padding: 1px 2px;
+        border-radius: 14px;
+        background: white; // box-shadow: inset 0 1px 0 0 #0d0e0f, inset 0 -1px 0 0 #3a3d42;
+        // -webkit-box-shadow: inset 0 1px 0 0 #0d0e0f, inset 0 -1px 0 0 #3a3d42;
+        outline: none;
+        /* no focus outline */
+    }
+
+    input[type="range"]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        width: 15px;
+        height: 15px;
+        border: none;
+        border-radius: 50px; // background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #529de1), color-stop(100%, #245e8f));
+        background: white;
+        /* android <= 2.2 */
+        // background-image: -webkit-linear-gradient(top, #529de1 0, #245e8f 100%);
+        /* older mobile safari and android > 2.2 */
+        ; // background-image: linear-gradient(to bottom, #529de1 0, #245e8f 100%);
+        /* W3C */
+    }
+
+    input[type="range"]::-moz-range-thumb {
+        width: 100%; // height: 18px;
+        border: none;
+        border-radius: 12px; // background-image: linear-gradient(to bottom, #529de1 0, #245e8f 100%);
+        /* W3C */
+    }
+
+    input[type="range"]::-ms-thumb {
+        width: 40px; // height: 18px;
+        border-radius: 12px;
+        border: 0;
+        background-image: linear-gradient(to bottom, #529de1 0, #245e8f 100%);
+        /* W3C */
+    }
+
+    input[type="range"]::-ms-track {
+        border: inherit;
+        color: transparent;
+        /* don't drawn vertical reference line */
+        background: transparent;
+    }
+
+    input[type="range"]::-ms-fill-lower,
+    input[type="range"]::-ms-fill-upper {
+        background: transparent;
     }
