Cambios al agregar la fuente de la forma AMP

--- a/src/Styles/base.scss
+++ b/src/Styles/base.scss
@@ -32,7 +32,9 @@ $color-919 : #191919;
 // @import url('https://fonts.googleapis.com/css?family=PT+Serif');
 // @import url('https://fonts.googleapis.com/css?family=Merriweather');
 // @import url('https://fonts.googleapis.com/css?family=Exo+2:600');
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+// @import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+
 
 
 body{
